--- a/music.html
+++ b/music.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 </head>
 <body>
-<div id="index"></div>
+<div id="music"></div>
 <!--<script type="text/javascript" src="build/common.js"></script>-->
-<script type="text/javascript" src="build/index.js"></script>
+<script type="text/javascript" src="build/music.js"></script>
 </body>
 </html>
